chan_pjsip: Creating Channel Causes Asterisk to Crash When Duplicate AOR             Sections Exist in pjsip.conf

This patch modifies the current loading strategy to consider the entire
pjsip configuration as invalid if duplicate sections (e.g. sections
containing the same [id/type]) are defined in pjsip.conf. If a duplicate
section is encountered during load, the entire configuration is rejected
and destroyed, an error message is logged and the load processing stops.

ASTERISK-24996 #close
Reported By: Ashley Sanders

Change-Id: I35090ca4cd40f1f34881dfe701a329145c347aef